--- a/koa-typeorm/tsconfig.json
+++ b/koa-typeorm/tsconfig.json
@@ -5,7 +5,7 @@
     ],
     "types": ["node", "mocha", "chai", "sinon", "lodash"],
     "target": "es2017",
-    "module": "system",
+    "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./build",
     "emitDecoratorMetadata": true,
