add users that have many posts
* posts can be created as cascading inserts from users (but not v.v.)
* deleting a user deletes its posts (but not v.v.)

side-effects:

* reconfigure migrations to always read from ts source
* add yarn scripts to run migrations using `ts-node`
* tweak tslint rules a bit more

--- a/koa-typeorm/ormconfig.json
+++ b/koa-typeorm/ormconfig.json
@@ -6,17 +6,17 @@
    "synchronize": false,
    "logging": true,
    "entities": [
-      "build/main/entity/**/*.js"
+      "src/main/entity/**/*.ts"
    ],
    "migrations": [
-      "build/main/migration/**/*.ts"
+      "src/main/migration/**/*.ts"
    ],
    "subscribers": [
-      "build/main/subscriber/**/*.ts"
+      "src/main/subscriber/**/*.ts"
    ],
    "cli": {
-      "entitiesDir": "build/main/entity",
-      "migrationsDir": "build/main/migration",
-      "subscribersDir": "build/main/subscriber"
+      "entitiesDir": "src/main/entity",
+      "migrationsDir": "src/main/migration",
+      "subscribersDir": "src/main/subscriber"
    }
 }
