--- a/koa-typeorm/package.json
+++ b/koa-typeorm/package.json
@@ -18,6 +18,8 @@
     "node": "10.4.0"
   },
   "dependencies": {
+    "koa": "^2.5.1",
+    "koa-router": "^7.4.0",
     "lodash": "^4.17.10",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
@@ -26,15 +28,19 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.3",
+    "@types/koa": "^2.0.46",
+    "@types/koa-router": "^7.0.28",
     "@types/lodash": "^4.14.109",
     "@types/mocha": "^5.2.1",
     "@types/node": "^10.3.2",
     "@types/sinon": "^5.0.1",
     "@types/sinon-chai": "^2.7.32",
+    "@types/supertest": "^2.0.4",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "sinon": "^5.1.1",
     "sinon-chai": "^3.1.0",
+    "supertest": "^3.1.0",
     "ts-node": "^6.1.0",
     "tslint": "^5.10.0",
     "tslint-eslint-rules": "^5.3.1"
