--- a/express-sequelize/package.json
+++ b/express-sequelize/package.json
@@ -11,15 +11,24 @@
     "node": "10.4.0"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha --reporter spec --compilers ts:ts-node/register 'test/**/*.spec.ts'",
+    "test": "NODE_ENV=test mocha --reporter spec --require @babel/register 'test/**/*.spec.js'",
     "build": "tsc",
     "start": "NODE_ENV=dev node build/index.js"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/plugin-transform-async-to-generator": "^7.0.0-beta.51",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/preset-es2017": "^7.0.0-beta.51",
+    "@babel/preset-stage-0": "^7.0.0-beta.51",
+    "@babel/register": "^7.0.0-beta.51",
+    "@babel/runtime": "^7.0.0-beta.51",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
+    "pg-native": "^3.0.0",
     "sequelize": "^4.37.10",
     "typescript": "^2.9.1"
   },
