--- a/express-sequelize/src/config/config.json
+++ b/express-sequelize/src/config/config.json
@@ -7,6 +7,7 @@
   "test": {
     "database": "jsblog_express_sequelize_test",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   }
 }
